tests/negative/test_cast_eval_same_type_ref.orb
fnc main () () {
    eval (sym (x 0));
    eval (= (cast i32 x) 0);
};